<resources>
    <string name="app_name">Land2door</string>
    <string name="edit_name">Farm\'s name</string>
    <string name="edit_description">Tell us something about your farm</string>
    <string name="edit_responsible">Your name</string>
    <string name="edit_phone">Phone</string>
    <string name="edit_mobile">Mobile</string>
    <string name="edit_email">E-mail</string>
    <string name="edit_website">Website</string>
    <string name="edit_address">Address</string>
    <string name="edit_zip">Zip code</string>
    <string name="edit_location">Location</string>
    <string name="button_send">Send</string>
</resources>
